style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400&display=swap');
body{
  min-height: 100vh;
  line-height: 1.5;
  font-family: 'Poppins';
}
body,
h1,
h2,
h3,
h4,
p{
  margin:0;
  padding:0;
}
.container,
.logo{
  display: flex;
  flex-flow:row wrap;
}
.logo img{
  width:100px;
  margin-right: 15px;
}
.logo{
  position: relative;
  top:25vh;
  justify-content: center;
  align-items: center;
  background-color: rgba(0, 0, 0, .4);
}

.logo h1{
  color:white;
}
.credits{
  color:white
}

.left{
  background-image: url('./images/Background-Image.jpg');
  background-position: 50% 12%;
  height: 100vh;
  width:40vw;
}
.credits{
  position: relative;
  top:97vh;
}
.right{
  width:59vw;
  background-color: black;
  display: flex;
  color:white;
  flex-flow: column nowrap;
  justify-content: center;
}
.form,
.log-in,
.btn-create{
  padding-left: 4vw;
}
.fake-heading-text{
  width:80%;
  font-weight: 500;
  font-size: 1.2em;
  margin-left: 78px;
}
.fake-heading-text p{
  margin-bottom: 20px;
}
form{
  box-shadow: 100%;
  flex-flow: row wrap;
  padding:20px 0;
  box-shadow: 50%;
}
.input-section{
  display: flex;
  flex-flow: column wrap;
  width: 200px;
  font-size: 0.8em;
  text-transform: uppercase;
  margin: 15px 30px;
}
.beginning-text{
  width: 100%;
  font-size: 1.2em;
  font-weight: 500;
}
.inputs{
  width:50%;
  display: flex;
  flex-flow: row wrap
}
input{
  background-color: #1b273a;
  border: 1px solid black;
  border-radius: 9px;
  height:30px;
  color: white;
}
input:valid{
  border-color: green;
}
input:invalid{
  border-color: red;
}
button{
  background-color: #8A6393;
  border-radius: 10px;
  margin-left: 25px;
  width:470px;
  height: 50px;
  font-size: 1.5em;
  
}
button:hover{
  cursor: pointer;
}
.bottom-right{
  display: flex;
  width:50%;
  justify-content: center;
}

